--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,10 @@
             <artifactId>jsqlparser</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.30.1</version>
+        </dependency>
     </dependencies>
 </project>
